Fix overflow on mobile and small screen sizes for product hero

--- a/stylesheets/responsive_styles.scss
+++ b/stylesheets/responsive_styles.scss
@@ -56,6 +56,7 @@
     }
 
     .product-hero{
+        overflow: hidden; 
         .hero-title{
             font-size: 2rem !important;
             line-height: 2rem !important; 
